--- a/Simon Says Game/index.html
+++ b/Simon Says Game/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Simon Says Game</h1>
-    <h3>Press any key to start the game</h3>
-    <div>
-        <div class="line1">
-            <div id="red" class="button"type=button>1</div>
-            <div id="yellow" class="button"type=button>2</div>
-        </div>
-        <br>
-        <div class="line2">
-            <div id="green" class="button"type=button>3</div>
-            <div id="blue" class="button"type=button>4</div>
-        </div>
-        
+    <h2>Press any key to start the game</h2>
+
+    <div class="btn-container">
+      <div class="line-one">
+        <div class="btn red" type="button" id="red">1</div>
+        <div class="btn yellow" type="button" id="yellow">2</div>
+      </div>
+      <div class="line-two">
+        <div class="btn green" type="button" id="green">3</div>
+        <div class="btn purple" type="button" id="purple">4</div>
+      </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
