--- a/HackAura25/assign.html
+++ b/HackAura25/assign.html
@@ -4,8 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="style.css">
+</head> 
 <body>
+    <h2 id="ass">Assignments</h2>
+    <div class="main">
+        <div class="assign" input type="color">
+            <div type=button><b>Subject</b></div>
+            <div>Task</div>
+            <br>
+            <br>
+            <div id="dd">due Date:</div>
+        </div>
+        <div class="assign" input type="color">
+            <div type=button><b>Subject</b></div>
+            <div>Task</div>
+            <br>
+            <br>
+            <div id="dd">due Date:</div>
+        </div>
+         <div class="assign" input type="color">
+            <div type=button><b>Subject</b></div>
+            <div>Task</div>
+            <br>
+            <br>
+            <div id="dd">due Date:</div>
+        </div> <div class="assign" input type="color">
+            <div type=button><b>Subject</b></div>
+            <div>Task</div>
+            <br>
+            <br>
+            <div id="dd">due Date:</div>
+        </div>
+         <div class="assign" input type="color">
+            <div type=button><b>Subject</b></div>
+            <div>Task</div>
+            <br>
+            <br>
+            <div id="dd">due Date:</div>
+        </div>
+    </div>
+   
     
 </body>
 </html>
