--- a/HackAura25/dashboard.html
+++ b/HackAura25/dashboard.html
@@ -5,20 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=home" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  </head>
 </head>
 <body>
     <div class="sidebar-menu">
         <div class="menu">
             <div id="user">User</div>
             <ul>
-                <li>
+                <li class="list">
+                    <a  href="dashboard.html">Home</a>
+                </li>
+                <li class="list">
                     <a href="assign.html">Tasks</a>
                 </li>
-                <li>
+                <li class="list">
                     <a href="calender.html">Planner</a>
                 </li>
             </ul>
         </div>
+    </div>
+    <div class="cal">
+        <h2>CollegeMate</h2>
     </div>
 </body>
 </html>
