--- a/HackAura25/assign.html
+++ b/HackAura25/assign.html
@@ -7,44 +7,35 @@
     <link rel="stylesheet" href="style.css">
 </head> 
 <body>
-    <h2 id="ass">Assignments</h2>
-    <div class="main">
-        <div class="assign" input type="color">
-            <div type=button><b>Subject</b></div>
-            <div>Task</div>
-            <br>
-            <br>
-            <div id="dd">due Date:</div>
+    <div class="container">
+        <div class="sidebar-menu">
+            <div class="menu">
+                <div id="user">User</div>
+                <ul>
+                    <li class="list">
+                        <a  href="dashboard.html">Home</a>
+                    </li>
+                    <li class="list">
+                        <a href="assign.html">Tasks</a>
+                    </li>
+                    <li class="list">
+                        <a href="calender.html">Planner</a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h2 id="ass">Assignments</h2>
+            <div class="main">
+                <div class="assign" input type="color">
+                    <div type=button><b>Subject</b></div>
+                    <div>Task</div>
+                    <br>
+                    <br>
+                    <div id="dd">due Date:</div>
+                </div>
+            </div>
+            </div>
         </div>
-        <div class="assign" input type="color">
-            <div type=button><b>Subject</b></div>
-            <div>Task</div>
-            <br>
-            <br>
-            <div id="dd">due Date:</div>
-        </div>
-         <div class="assign" input type="color">
-            <div type=button><b>Subject</b></div>
-            <div>Task</div>
-            <br>
-            <br>
-            <div id="dd">due Date:</div>
-        </div> <div class="assign" input type="color">
-            <div type=button><b>Subject</b></div>
-            <div>Task</div>
-            <br>
-            <br>
-            <div id="dd">due Date:</div>
-        </div>
-         <div class="assign" input type="color">
-            <div type=button><b>Subject</b></div>
-            <div>Task</div>
-            <br>
-            <br>
-            <div id="dd">due Date:</div>
-        </div>
-    </div>
-   
-    
+    </div>    
 </body>
 </html>
