--- a/HackAura25/dashboard.html
+++ b/HackAura25/dashboard.html
@@ -10,7 +10,8 @@
   </head>
 </head>
 <body>
-    <div class="sidebar-menu">
+    <div class="container">
+        <div class="sidebar-menu">
         <div class="menu">
             <div id="user">User</div>
             <ul>
@@ -26,8 +27,9 @@
             </ul>
         </div>
     </div>
-    <div class="cal">
+    <div class="home">
         <h2>CollegeMate</h2>
+    </div>
     </div>
 </body>
 </html>
