added new bg img

--- a/HackAura25/dashboard.html
+++ b/HackAura25/dashboard.html
@@ -29,6 +29,17 @@
     </div>
     <div class="home">
         <h2>CollegeMate</h2>
+        <br>
+        <div class="rec">
+            <div id="dued">
+                <label for="check">Task</label>
+                <input type="checkbox" id="check" class="check">
+            </div>
+            <div id="dued">
+                <label for="check 2">Task</label>
+                <input type="checkbox" id="check 2" class="check">
+            </div>
+        </div>
     </div>
     </div>
 </body>
