--- a/CollegeMate/login.html
+++ b/CollegeMate/login.html
@@ -6,6 +6,45 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+      <div class="login">
+        <h1>Create an account</h1>
+
+        <p>Already have an account ? <a href="#">Log in</a></p>
+
+        <div class="details">
+          <input type="text" placeholder="First name" id="first" />
+          <label for="first"></label>
+          <input type="text" placeholder="Last name" id="last" />
+          <label for="last"></label>
+        </div>
+        <div class="email">
+          <input type="text" placeholder="Email" id="email" />
+          <label for="email"></label>
+        </div>
+        <div class="password">
+          <input type="password" placeholder="Enter your password" id="pass" />
+          <label for="pass"></label>
+          <i class="fa-solid fa-eye"></i>
+        </div>
+        <div class="tandc">
+          <input type="checkbox" id="check" />
+          <label for="check"></label>
+          <p>I agree to the <a href="#">Terms & conditions</a></p>
+        </div>
+        <div class="button">
+          <button type="submit">Create account</button>
+        </div>
+        <div class="para">
+          <p>or register with</p>
+        </div>
+        <div class="register">
+          <button type="submit"><i class="fa-brands fa-apple"></i>Apple</button>
+          <button type="submit">
+            <i class="fa-brands fa-google"></i>Google
+          </button>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
